@@ -92,6 +92,10 @@
    - sobrado@cvs.openbsd.org 2008/11/01 11:14:36
      [ssh-keyscan.1 ssh-keyscan.c]
      the ellipsis is not an optional argument; while here, improve spacing.
+   - stevesk@cvs.openbsd.org 2008/11/01 17:40:33
+     [clientloop.c readconf.c readconf.h ssh.c]
+     merge dynamic forward parsing into parse_forward();
+     'i think this is OK' djm@
 
 20080906
  - (dtucker) [config.guess config.sub] Update to latest versions from
@@ -4826,4 +4830,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.5121 2008/11/03 08:27:07 djm Exp $
+$Id: ChangeLog,v 1.5122 2008/11/03 08:27:34 djm Exp $
